# tasks

./: .gitignore  main.py  pyproject.toml  requirements.txt  settings.toml
algo/algo3/3_1/: func.py  func2.py  input.txt
algo/algo3/3_2/: func.py  input.txt
algo/algo4/4_1/: func.py  func2.py  func3.py  input.txt
algo/algo4/4_2/: func.py  func2.py  func3.py  input.txt
algo/algo5/5_1/: func.py  input.txt
algo/algo5/5_2/: formatted.py  func.py  func2.py  func3.py  input.txt  input2.txt
algo/exam/variant3/: README.md  catalog.txt  config.py  duplicates.json  func.py  func2.py  main.py  new_items.txt
assistant_budget/: alembic.ini
assistant_budget/alembic/: env.py
assistant_budget/alembic/versions/: 243e97a8416c_initial_tables.py  a54dbf48d23d_initial_tables.py
assistant_budget/db/: database.py
assistant_budget/src/: database.py  main.py  models.py
assistant_budget/src/api/: __init__.py
assistant_budget/src/configs/: app.py
assistant_budget/src/models/: __init__.py  category.py  expense.py  expense_participant.py  family.py  model_base.py  user.py
assistant_budget/src/repositories/: categories.py  expense_participants.py  expenses.py  families.py  users.py
assistant_budget/src/schemas/: category_schema.py  expense_participant_schema.py  expense_schema.py  family_schema.py  misc_schema.py  user_schema.py
assistant_budget/src/services/: category_service.py  expense_participant_service.py  expense_service.py  family_service.py  user_service.py
my_project_py_task8/: pyproject.toml
my_project_py_task8/src/my_project_py_task8/: main.py  models.py  (+1 more)
(+6 files in other folders)
