[project]
name = "my-project-py-task8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "dynaconf>=3.2.12",
    "fastapi>=0.121.1",
    "greenlet>=3.2.4",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.2.12",
    "pydantic[email]>=2.12.4",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
